# hw_31

./: .gitignore  conftest.py  db.sqlite3  factories.py  pyproject.toml  pytests.ini
ads/: admin.py  asgi.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py  wsgi.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_alter_ad_name_alter_category_name.py  0004_selection.py  0005_category_slug_alter_ad_name.py
ads/tests/: test_ads.py  test_selections.py
ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
avito/: settings.py  urls.py
data/: ad.csv  ads.json  csv_to_json.py  user.csv  users.json
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_location_lat_alter_location_lng.py  0004_alter_user_age.py  0005_alter_user_age_alter_user_role.py  0006_alter_user_managers_user_date_joined_user_email_and_more.py  0007_alter_user_age.py  0008_user_birth_date_alter_user_email_and_more.py
